Bug 274846 - Cannot disconnect connections marked as Auto connect
Summary: Cannot disconnect connections marked as Auto connect
Status: CLOSED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: networkmanagement (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Will Stephenson
URL:
Keywords:
: 276670 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-06-03 15:33 UTC by Kai Uwe Broulik
Modified: 2018-03-25 17:51 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Disconnect Behaviour (778.35 KB, video/mkv)
2017-02-06 17:18 UTC, Frieder
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2011-06-03 15:33:57 UTC
Version:           unspecified (using KDE 4.6.3) 
OS:                Linux

You cannot disconnect any connection that has the checkbox “Auto connect” enabled in settings.
When you click the X to disconnect a such connection, it instantly reconnects.

Reproducible: Always
Comment 1 Lamarque V. Souza 2011-06-03 19:07:17 UTC
Git commit d461970731617aa553b714340c394c3cfc96ed89 by Lamarque V. Souza.
Committed on 03/06/2011 at 19:05.
Pushed by lvsouza into branch 'master'.

Backport fix for disconnecting auto-connect connections to master branch
(NM-0.8).

BUG: 274846

M  +5    -1    backends/NetworkManager/nmdbussettingsservice.cpp     

http://commits.kde.org/networkmanagement/d461970731617aa553b714340c394c3cfc96ed89
Comment 2 Lamarque V. Souza 2011-06-28 15:29:55 UTC
*** Bug 276670 has been marked as a duplicate of this bug. ***
Comment 3 Frieder 2017-02-06 17:18:26 UTC
Created attachment 103868 [details]
Disconnect Behaviour

Bug still persists
Comment 4 Frieder 2017-02-06 17:20:36 UTC
Comment on attachment 103868 [details]
Disconnect Behaviour

The flickering looks like a bug in the recorder so nvm that
Comment 5 Frieder 2017-02-06 17:22:41 UTC
I think this should be reopended again.
see attachement (Disconnect Behaviour)
Comment 6 Christoph Feck 2017-02-07 19:54:28 UTC
Please report a new ticket for plasma-nm