Backport fix for disconnecting auto-connect connections to master branch (NM-0.8).

BUG: 274846